refactor: Revert to original auth method.
Deprecated OAuth callback endpoints because have resolve the redirect_uri issue.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,9 @@ services:
       - 'MICROSOFT_CLIENT_ID=${MICROSOFT_CLIENT_ID}'
       - 'MICROSOFT_CLIENT_SECRET=${MICROSOFT_CLIENT_SECRET}'
       - 'MICROSOFT_CLIENT_TENANT_ID=${MICROSOFT_CLIENT_TENANT_ID}'
+      - 'MICROSOFT_REDIRECT_URI=${MICROSOFT_REDIRECT_URI}'
       - 'AUTH_SERVER_URL=${AUTH_SERVER_URL}'
+      - 'ENABLE_OAUTH_SIGNUP=${ENABLE_OAUTH_SIGNUP-False}'
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
