fix: add AIOHTTP_CLIENT_SESSION_SSL environment variable to docker-compose
The purpose is to support HTTPS protocol without verification.

TODO: need add SSL key to fully enable HTTPS protocol

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,7 @@ services:
       - 'MICROSOFT_REDIRECT_URI=${MICROSOFT_REDIRECT_URI}'
       - 'ENABLE_OAUTH_SIGNUP=${ENABLE_OAUTH_SIGNUP-False}'
       - 'MICROSOFT_OAUTH_SCOPE=${MICROSOFT_OAUTH_SCOPE-"openid email profile offline_access"}'
+      - 'AIOHTTP_CLIENT_SESSION_SSL=false'
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
